--- a/informacion/footer/torneos.html
+++ b/informacion/footer/torneos.html
@@ -54,6 +54,8 @@
     </header>
     <!-- MAIN -->
     <main>
+      <!-- BUTTON TOP -->
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
       <div class="main">
         <!-- BREADCRUMB -->
         <div class="breadcrumb">
