--- a/informacion/actividades.html
+++ b/informacion/actividades.html
@@ -105,7 +105,7 @@
             <div class="rol">
               <p>Exposición</p>
             </div>
-            <div class="titlesActivity">
+            <div class="titlesRight titlesActivity">
               Coches tunning temáticos
             </div>
             <div class="description">
@@ -152,7 +152,7 @@
             <div class="rol">
               <p>Social</p>
             </div>
-            <div class="titlesActivity">
+            <div class="titlesRight titlesActivity">
               Bodas otakus
             </div>
             <div class="description">
