--- a/informacion/actividades.html
+++ b/informacion/actividades.html
@@ -173,7 +173,7 @@
           />
           <div class="text">
             <div class="rol">
-              <p>Formación y entretenimiento</p>
+              <p>Formación</p>
             </div>
             <div class="titlesActivity">
               Talleres
